Fix gap
Fixxed gap between rows

--- a/styles.css
+++ b/styles.css
@@ -9,17 +9,17 @@
     width: 900px;
     height: 900px;
     flex-direction: column;
-    flex-grow: 1;
+    /* flex-grow: 1; */
 }
 
 .row {
     display: flex;
-    flex-grow: 1;
+    /* flex-grow: 1; */
 }
 
 .pixel {
     border: 1px;
     border-style: solid;
-    height: 40px;
-    width: 40px;
+    /* height: 40px;
+    width: 40px; */
 }
